# mecha-agent

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md  dotenv.example  fly.toml  settings.yml  settings.yml.example
.github/workflows/: build-agent-aarch64.yml  build-connect-app-aarch64.yml
agent/: Cargo.toml
agent/src/: errors.rs  init.rs  lib.rs  subscriber.rs  tracing.rs
app-services/: Cargo.toml
app-services/src/: errors.rs  handler.rs  hyper_client.rs  lib.rs  service.rs
client/app/: Cargo.toml  README.md  build.rs  package-lock.json  package.json  settings.yml.example  svelte.config.js  tailwind.config.js
client/app/.cargo/: config
client/app/src/: Icons.svelte  app.html  app.pcss  errors.rs  interfaces.ts  main.rs  services.rs
client/app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
client/app/src-tauri/src/: main.rs
client/app/src-tauri/src/utils/: errors.rs  mod.rs  provision_manager.rs
client/app/src/assets/css/: style.css
client/app/src/handlers/: mod.rs
client/app/src/handlers/machine_info/: handler.rs
client/app/src/handlers/provision/: handler.rs
client/app/src/handlers/start_screen/: handler.rs
client/app/src/lib/: services.ts  stores.ts
client/app/src/lib/components/ui/carousel/: carousel-content.svelte  carousel-item.svelte  carousel-next.svelte  carousel-previous.svelte  carousel.svelte
client/app/src/lib/components/ui/dialog/: dialog-content.svelte  dialog-overlay.svelte
client/app/src/lib/components/ui/progress/: progress.svelte
client/app/src/lib/custom-components/: Header.svelte  SubHeader.svelte
client/app/src/pages/: check_internet.rs  configure_machine.rs  link_machine.rs  machine_info.rs  mod.rs  no_internet.rs  setup_failed.rs  setup_success.rs  start_screen.rs  timeout_screen.rs
client/app/src/routes/: +layout.svelte  +page.svelte
client/app/src/routes/check-internet/: +page.svelte
client/app/src/routes/configure-machine/: +page.svelte
client/app/src/routes/link-machine/: +page.svelte
client/app/src/routes/machine-info/: +page.svelte
client/app/src/routes/no-internet/: +page.svelte
client/app/src/routes/setup-failed/: +page.svelte
client/app/src/routes/setup-success/: +page.svelte
client/app/src/routes/timeout-service/: +page.svelte
client/app/src/server/: identity_client.rs  mod.rs  provision_client.rs  settings_client.rs
client/app/src/settings/: mod.rs
client/app/src/shared/: Header.svelte  Icons.svelte  SubHeader.svelte  layout.svelte
client/app/src/utils/: mod.rs
client/app/src/widgets/: icon_button.rs  icon_input.rs  mod.rs
client/commons/custom_utils/: Cargo.toml
commons/channel/: Cargo.toml
commons/channel/src/: lib.rs
commons/crypto/: Cargo.toml
commons/crypto/src/: base64.rs  errors.rs  lib.rs  random.rs  x509.rs
commons/fs/: Cargo.toml
commons/fs/src/: errors.rs  lib.rs
commons/generator/: Cargo.toml
commons/generator/src/: lib.rs
commons/key_value_store/: Cargo.toml
commons/key_value_store/src/: errors.rs  lib.rs
commons/kv-store/: Cargo.toml
commons/kv-store/src/: errors.rs  lib.rs
commons/kv_store/: Cargo.toml
commons/kv_store/src/: errors.rs  lib.rs
commons/nats-client/: Cargo.toml
commons/nats-client/src/: errors.rs  jetstream.rs  lib.rs
commons/nats_client/: Cargo.toml
commons/nats_client/src/: errors.rs  jetstream.rs  jwt.rs  lib.rs
commons/services_client/: Cargo.toml  build.rs
commons/services_client/proto/: messaging.proto  provisioning.proto
commons/services_client/src/: lib.rs
commons/settings/: Cargo.toml
commons/settings/src/: device_settings.rs  lib.rs  messaging.rs  networking.rs  provisioning.rs  telemetry.rs
commons/wireguard/: Cargo.toml
commons/wireguard/src/: lib.rs
config/: otel-contrib.yml.example
core/events/: Cargo.toml
core/events/src/: lib.rs
core/services/: Cargo.toml
core/services/src/: lib.rs
core/settings/: Cargo.toml
core/settings/src/: constants.rs  device_settings.rs  heartbeat.rs  lib.rs  messaging.rs  networking.rs  provisioning.rs  settings.rs  status.rs  telemetry.rs
device_settings/: Cargo.toml
device_settings/src/: errors.rs  lib.rs  service.rs  services.rs
grpc-server/: Cargo.toml  build.rs
grpc-server/proto/: logs.proto  metrics.proto
grpc-server/src/: errors.rs  lib.rs
grpc-server/src/services/: identity.rs  mod.rs  (+3 more)
grpc_server/: Cargo.toml  build.rs
grpc_server/proto/: identity.proto  messaging.proto  provisioning.proto  settings.proto  trace.proto
grpc_server/src/: errors.rs  lib.rs
grpc_server/src/services/: identity.rs  messaging.rs  mod.rs  provisioning.rs  settings.rs  telemetry.rs
heartbeat/: Cargo.toml
heartbeat/src/: errors.rs  handler.rs  lib.rs  service.rs
identity/: Cargo.toml
identity/src/: errors.rs  handler.rs  service.rs
messaging/: .gitignore  Cargo copy.toml  Cargo.toml  config.yml.example
messaging/provisioning/: Cargo.toml
messaging/server/proto/: provisioning.proto
messaging/server/src/: server_settings.rs
messaging/server/src/routes/: provisioning.rs
messaging/src/: errors.rs  handler.rs  lib.rs  service.rs  settings.rs
messaging/telemetry/src/: service.rs
messaging_auth/: Cargo.toml
messaging_auth/src/: service.rs  settings.rs
networking/: Cargo.toml
networking/src/: errors.rs  handler.rs  handshake_handler.rs  lib.rs  nebula.rs  service.rs  utils.rs
provisioning/: Cargo.toml
provisioning/src/: crypto.rs  errors.rs  handler.rs  lib.rs  service.rs  settings.rs  utils.rs
server/: Cargo.toml  build.rs
server/proto/: device_settings.proto  provisioning.proto
server/src/: errors.rs  main.rs  routes.rs  server.rs  server_settings.rs  settings.rs
server/src/routes/: messaging_auth.rs  provisioning.rs  telemetry.rs
server/src/services/: device_settings.rs  mod.rs  provisioning.rs  telemetry.rs
settings/: Cargo.toml
settings/src/: errors.rs  handler.rs  lib.rs  service.rs  services.rs
status/: Cargo.toml
status/src/: errors.rs  handler.rs  service.rs
telemetry/: Cargo.toml
telemetry/src/: config.rs  errors.rs  handler.rs  lib.rs  metrics.rs  service.rs  settings.rs
(+3 files in other folders)
