[workspace]
default-members = ["agent"]
members = ["agent", "core/services", "core/events", "core/settings", "provisioning", "messaging", "identity", "heartbeat", "settings", "grpc_server", "networking","telemetry","commons/crypto", "commons/kv_store", "commons/fs", "commons/services_client"]


[workspace.package]
name = "mecha_agent"
version = "1.0.0"
authors = ["Minesh Purohit <mineshp@mechasystems.com", "Shoaib Merchant <shoaibm@mechasystems.com>"]
description = "Mecha Agent on the device for provisioning, messaging and more"
documentation = "https://docs.mecha.so"
edition = "2021"
license = "MIT"
repository = "https://github.com/mecha-org/mecha-agent"
homepage = "https://mecha.so"
