[package]
name = "mecha_agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
events = { path = "../core/events" }
agent_settings = { path = "../core/settings" }
grpc_server = { path = "../grpc_server" }
heartbeat = { path = "../heartbeat" }
identity = { path = "../identity" }
messaging = { path = "../messaging" }
channel = { path = "../commons/channel" }
provisioning = { path = "../provisioning" }
settings = { path = "../settings" }
networking = { path = "../networking" }
telemetry = { path = "../telemetry" }
tokio = { version = "1.27.0", features = ["full"] }
serde = { version  = "1.0.159", features = ["derive"]}
serde_json = "1.0.33"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sentry-tracing = {version= "0.32.1"}
sentry = { version = "0.32.1",features = ["backtrace", "anyhow"] }
init-tracing-opentelemetry = { version = "0.12.0", features = ["otlp", "tracing_subscriber_ext"] }
sentry-anyhow = { version= "0.32.1", features = ["backtrace"]}
tracing-opentelemetry-instrumentation-sdk = "0.15.0"
anyhow = { version= "1.0.71", features = ["backtrace"]}
protobuf = "3.2.0"
tonic = "0.10.2"
tonic-types = "0.10.2"
prost = "0.12.3"
prost-types = "0.12.3"
bincode = "1.3.3"
opentelemetry = "0.21.0"
tracing-appender = "0.2.3"

[build-dependencies]
tonic-build = "0.10.2"
