[package]
name = "mecha-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "mecha-agent"
path = "src/bin/agent.rs"

[dependencies]
events = { path = "../core/events" }
agent-settings = { path = "../core/settings" }
grpc-server = { path = "../grpc-server" }
status = { path = "../status" }
identity = { path = "../identity" }
messaging = { path = "../messaging" }
channel = { path = "../commons/channel" }
provisioning = { path = "../provisioning" }
settings = { path = "../settings" }
telemetry = { path = "../telemetry" }
networking = { path = "../networking" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sentry-tracing = { workspace = true }
sentry = { workspace = true }
init-tracing-opentelemetry = { workspace = true }
anyhow = { workspace = true }
opentelemetry = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tonic-types = { workspace = true }
protobuf = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
bincode = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }

[build-dependencies]
tonic-build = "0.10.2"


[package.metadata.deb]
name = "mecha-agent"
depends = "$auto"
assets = [
    # binary
    [
        "../target/release/mecha-agent",
        "/usr/bin/",
        "755",
    ],
    # settings
    [
        "../settings.yml.example",
        "/etc/mecha/settings.yml",
        "644",
    ],
]