[package]
name = "grpc_server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
heartbeat = { path = "../heartbeat" }
messaging = { path = "../messaging" }
agent_settings = { path = "../core/settings" }
identity = { path = "../identity" }
provisioning = { path = "../provisioning" }
settings = { path = "../settings" }
telemetry = { path = "../telemetry" }
tokio = { version = "1.27.0", features = ["full"] }
serde = { version  = "1.0.159", features = ["derive"]}
tracing = "0.1"
sentry = { version = "0.31.0",features = ["backtrace", "anyhow"] }
sentry-anyhow = { version= "0.31.1", features = ["backtrace"]}
tracing-opentelemetry-instrumentation-sdk = "0.12.0"
anyhow = { version= "1.0.71", features = ["backtrace"]}
protobuf = "3.2.0"
tonic = "0.9.2"
tonic-types = "0.9.2"
prost = "0.11.9"
prost-types = "0.7"
bincode = "1.3.3"

[build-dependencies]
tonic-build = "0.9.2"
