[package]
name = "grpc_server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
heartbeat = { path = "../heartbeat" }
messaging = { path = "../messaging" }
agent_settings = { path = "../core/settings" }
channel = { path = "../commons/channel" }
identity = { path = "../identity" }
provisioning = { path = "../provisioning" }
settings = { path = "../settings" }
telemetry = { path = "../telemetry" }
tokio = { version = "1.27.0", features = ["full"] }
serde = { version  = "1.0.159", features = ["derive"]}
tracing = "0.1"
sentry = { version = "0.32.1",features = ["backtrace", "anyhow"] }
sentry-anyhow = { version= "0.32.1", features = ["backtrace"]}

anyhow = { version= "1.0.71", features = ["backtrace"]}
protobuf = "3.2.0"
tonic = "0.10.2"
tonic-types = "0.10.2"
prost = "0.12.3"
prost-types = "0.12.3"
bincode = "1.3.3"

[build-dependencies]
tonic-build = "0.10.2"
