[package]
name = "grpc_server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
status = { path = "../status" }
messaging = { path = "../messaging" }
agent_settings = { path = "../core/settings" }
channel = { path = "../commons/channel" }
identity = { path = "../identity" }
provisioning = { path = "../provisioning" }
settings = { path = "../settings" }
telemetry = { path = "../telemetry" }
tokio = { version = "1.27.0", features = ["full"] }
serde = { version  = "1.0.159", features = ["derive"]}
tracing = "0.1"
sentry = { version = "0.32.1",features = ["backtrace", "anyhow"] }
sentry-anyhow = { version= "0.32.1", features = ["backtrace"]}
anyhow = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
bincode = { workspace = true }
protobuf = { workspace = true }
tonic = { workspace = true }
tonic-types = { workspace = true }

[build-dependencies]
tonic-build = "0.10.2"
