[package]
name = "heartbeat"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
messaging = { path = "../messaging" }
settings = { path = "../commons/settings" }
crypto = { path = "../commons/crypto" }
anyhow = { version = "1.0.71", features = ["backtrace"]}
sentry-tracing = {version = "0.31.0"}
sentry = { version = "0.31.0",features = ["backtrace", "anyhow"] }
sentry-anyhow = { version= "0.31.1", features = ["backtrace"]}
serde_json = "1.0.33"
serde = { version  = "1.0.159", features = ["derive"]}
tonic = "0.9.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry-instrumentation-sdk = "0.12.0"
tokio = { version = "1.27.0", features = ["full"] }
sha256 = "1.1.2"
chrono = "0.4.26"