[package]
name = "identity"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
events = { path = "../core/events" }
services = { path = "../core/services" }
agent_settings = { path = "../core/settings" }
crypto = { path = "../commons/crypto" }
fs = { path = "../commons/fs" }
anyhow = { version = "1.0.71", features = ["backtrace"]}
tonic = "0.9.2"
tracing = "0.1"
tracing-opentelemetry-instrumentation-sdk = "0.12.0"
tokio = { version = "1.27.0", features = ["full"] }
