[package]
name = "identity"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
events = { path = "../core/events" }
services = { path = "../core/services" }
agent-settings = { path = "../core/settings" }
crypto = { path = "../commons/crypto" }
fs = { path = "../commons/fs" }
anyhow = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-types = { workspace = true }
tracing = { workspace = true }
