[package]
name = "messaging"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
events = { path = "../core/events" }
services = { path = "../core/services" }
crypto = { path = "../commons/crypto" }
agent_settings = { path = "../core/settings" }
nats_client = { path = "../commons/nats_client" }
identity = { path = "../identity" }
anyhow = { version = "1.0.71", features = ["backtrace"]}
reqwest = { version = "0.11", features = ["json"] }
sentry-tracing = {version = "0.31.0"}
sentry-anyhow = { version= "0.31.1", features = ["backtrace"]}
serde = { version  = "1.0.159", features = ["derive"]}
tonic = "0.9.2"
tokio = { version = "1.27.0" }
tracing = "0.1"
tracing-opentelemetry-instrumentation-sdk = "0.12.0"
sha256 = "1.1.2"
