[package]
name = "messaging"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
events = { path = "../core/events" }
services = { path = "../core/services" }
crypto = { path = "../commons/crypto" }
channel = { path = "../commons/channel" }
agent-settings = { path = "../core/settings" }
nats-client = { path = "../commons/nats-client" }
identity = { path = "../identity" }
anyhow = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-types = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
sentry-tracing = { workspace = true }

serde = { workspace = true }
sha256 = { workspace = true }