[package]
name = "messaging_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.33"
serde = { version  = "1.0.159", features = ["derive"]}
rand = "0.8.5"
sha256 = "1.4.0"
openssl = "0.10.56"
anyhow = { version= "1.0.71", features = ["backtrace"]}

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sentry-tracing = {version= "0.31.0"}
sentry = { version = "0.31.0",features = ["backtrace", "anyhow"] }
sentry-anyhow = { version= "0.31.1", features = ["backtrace"]}
tracing-opentelemetry-instrumentation-sdk = "0.12.0"