[package]
name = "networking"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
settings = { path = "../settings" }
events = { path = "../core/events" }
channel = { path = "../commons/channel" }
agent_settings = { path = "../core/settings" }
messaging = { path = "../messaging" }
identity = { path = "../identity" }
wireguard = { path = "../commons/wireguard" }
anyhow = { version = "1.0.71", features = ["backtrace"]}
tokio = { version = "1.27.0" }
tonic = "0.10.2"
tracing = "0.1"
tokio-util = "0.7.10"
sentry-anyhow = { version= "0.32.1", features = ["backtrace"]}
sha256 = "1.1.2"
serde_json = "1.0.33"
serde = { version  = "1.0.159", features = ["derive"]}
crypto = { path = "../commons/crypto" }
futures = "0.3.28"