[package]
name = "networking"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
events = { path = "../core/events" }
services = { path = "../core/services" }
identity = { path = "../identity" }
messaging = { path = "../messaging" }
settings = { path = "../settings" }
channel = { path = "../commons/channel" }
crypto = { path = "../commons/crypto" }
fs = { path = "../commons/fs" }
agent-settings = { path = "../core/settings" }
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tonic-types = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
sentry = { workspace = true }
sentry-tracing = { workspace = true }
sentry-anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha256 = { workspace = true }
chrono = { workspace = true }
tar = "0.4.40"
flate2 = "1.0.28"
zip = "0.6.6"
nix = {version="0.27.1", features=["user"]}
ipaddress = "0.1.3"
iprange = { version = "0.6", features = ["serde"] }
ipnet = "2.9.0"