[package]
name = "provisioning"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
events = { path = "../core/events" }
crypto = { path = "../commons/crypto" }
services = { path = "../core/services" }
agent_settings = { path = "../core/settings" }
fs = { path = "../commons/fs" }
async-trait = "0.1.74"
anyhow = { version = "1.0.71", features = ["backtrace"]}
reqwest = { version = "0.11", features = ["json"] }
sentry-tracing = { version = "0.32.1" }
sentry = { version = "0.32.1",features = ["backtrace", "anyhow"] }
sentry-anyhow = { version= "0.32.1", features = ["backtrace"]}
serde_json = "1.0.33"
serde = { version  = "1.0.159", features = ["derive"]}
tokio = { version = "1.27.0" }
tonic = "0.10.2"
tracing = "0.1"
tracing-opentelemetry-instrumentation-sdk = "0.15.0"