[package]
name = "provisioning"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
events = { path = "../core/events" }
messaging = { path = "../messaging" }
identity = { path = "../identity" }
crypto = { path = "../commons/crypto" }
services = { path = "../core/services" }
channel = { path = "../commons/channel" }
kv-store = { path = "../commons/kv-store" }
agent-settings = { path = "../core/settings" }
fs = { path = "../commons/fs" }
anyhow = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
sentry = { workspace = true }
sentry-tracing = { workspace = true }
sentry-anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-types = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_yaml = { workspace = true }
sha256 = { workspace = true }
chrono = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
