[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
provisioning = { path = "../provisioning" }
messaging_auth = { path = "../messaging_auth" }

axum = "0.6.17"
axum-macros = "0.3.8"
tokio = { version = "1.27.0", features = ["full"] }
serde_yaml = "0.9.21"
serde = { version  = "1.0.159", features = ["derive"]}
futures = "0.3.28"
serde_json = "1.0.33"
dotenv = "0.15.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sentry-tracing = {version= "0.31.0"}
sentry = { version = "0.31.0",features = ["backtrace", "anyhow"] }
sentry-anyhow = { version= "0.31.1", features = ["backtrace"]}
tracing-loki = "0.2.3"
tracing-appender = "0.2"
tracing-opentelemetry = "0.19.0"
opentelemetry_sdk = { version = "0.19.0", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.11.0"
opentelemetry-http = "0.8.0"
axum-tracing-opentelemetry = "0.13.1"
init-tracing-opentelemetry = { version = "0.12.0", features = ["otlp", "tracing_subscriber_ext"] }
tracing-opentelemetry-instrumentation-sdk = "0.12.0"
opentelemetry_api = { version = "0.19.0", features = ["metrics"] }
anyhow = { version= "1.0.71", features = ["backtrace"]}
uuid = {version = "1.3.2", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
tower-http = { version = "0.3.4", features = ["trace"] }
protobuf = "3.2.0"
tonic = "0.9.2"
prost = "0.11.9"
prost-types = "0.7"
bincode = "1.3.3"
url = "2.4.0"
opentelemetry = "0.20.0"

[build-dependencies]
tonic-build = "0.9.2"
