[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
provisioning = { path = "../provisioning" }
telemetry = { path = "../telemetry" }
tokio = { version = "1.27.0", features = ["full"] }
serde_yaml = "0.9.21"
serde = { version  = "1.0.159", features = ["derive"]}
futures = "0.3.28"
serde_json = "1.0.33"
dotenv = "0.15.0"
anyhow = { version= "1.0.71", features = ["backtrace"]}
uuid = {version = "1.3.2", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
tower-http = { version = "0.3.4", features = ["trace"] }
protobuf = "3.2.0"
tonic = "0.9.2"
prost = "0.11.9"
prost-types = "0.7"
bincode = "1.3.3"
tracing = "0.1"
tracing-subscriber =  { version = "0.2.0-alpha", features = ["tracing-log"] }
tracing-attributes = "0.1"
tracing-futures = "0.2"

[build-dependencies]
tonic-build = "0.9.2"
