[package]
name = "mecha_agent_server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
provisioning = { path = "../provisioning" }
messaging = { path = "../messaging" }
heartbeat = { path = "../heartbeat" }
settings = { path = "../commons/settings" }
identity = { path = "../identity" }
axum = "0.6.17"
axum-macros = "0.3.8"
tokio = { version = "1.27.0", features = ["full"] }
serde = { version  = "1.0.159", features = ["derive"]}
futures = "0.3.28"
serde_json = "1.0.33"
dotenv = "0.15.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sentry-tracing = {version= "0.31.0"}
sentry = { version = "0.31.0",features = ["backtrace", "anyhow"] }
sentry-anyhow = { version= "0.31.1", features = ["backtrace"]}
axum-tracing-opentelemetry = "0.13.1"
init-tracing-opentelemetry = { version = "0.12.0", features = ["otlp", "tracing_subscriber_ext"] }
tracing-opentelemetry-instrumentation-sdk = "0.12.0"
anyhow = { version= "1.0.71", features = ["backtrace"]}
uuid = {version = "1.3.2", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
tower-http = { version = "0.3.4", features = ["trace"] }
protobuf = "3.2.0"
tonic = "0.9.2"
tonic-types = "0.9.2"
prost = "0.11.9"
prost-types = "0.7"
bincode = "1.3.3"
url = "2.4.0"
opentelemetry = "0.20.0"

[build-dependencies]
tonic-build = "0.9.2"
