[package]
name = "settings"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agent_settings = { path = "../core/settings" }
events = { path = "../core/events" }
messaging = { path = "../messaging" }
identity = { path = "../identity" }
channel = { path = "../commons/channel" }
nats_client = { path = "../commons/nats_client" }
services = { path = "../core/services" }
kv_store = { path = "../commons/kv_store" }
crypto = { path = "../commons/crypto" }
anyhow = { version = "1.0.71", features = ["backtrace"]}
sentry-anyhow = { version= "0.32.1", features = ["backtrace"]}
serde_json = "1.0.33"
serde = { version  = "1.0.159", features = ["derive"]}
tonic = "0.10.2"
tracing = "0.1"
tracing-opentelemetry-instrumentation-sdk = "0.15.0"
tokio = { version = "1.27.0", features = ["full"] }
futures = "0.3.28"
sha256 = "1.1.2"