[package]
name = "settings"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agent-settings = { path = "../core/settings" }
events = { path = "../core/events" }
messaging = { path = "../messaging" }
identity = { path = "../identity" }
channel = { path = "../commons/channel" }
nats-client = { path = "../commons/nats-client" }
services = { path = "../core/services" }
kv-store = { path = "../commons/kv-store" }
crypto = { path = "../commons/crypto" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
sha256 = { workspace = true }
tokio-util = { workspace = true }