[package]
name = "status"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
events = { path = "../core/events" }
services = { path = "../core/services" }
messaging = { path = "../messaging" }
identity = { path = "../identity" }
channel = { path = "../commons/channel" }
agent_settings = { path = "../core/settings" }
crypto = { path = "../commons/crypto" }
anyhow = { version = "1.0.71", features = ["backtrace"]}
sentry = { version = "0.32.1",features = ["backtrace", "anyhow"] }
sentry-anyhow = { version= "0.32.1", features = ["backtrace"]}
serde_json = "1.0.33"
serde = { version  = "1.0.159", features = ["derive"]}
tonic = "0.10.2"
tracing = "0.1"
sha256 = "1.1.2"
tokio = { version = "1.27.0", features = ["full"] }
chrono = "0.4.26"
tokio-util = "0.7.10"
sys-info = "0.9.1"
platforms = "3.3.0"