[package]
name = "status"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
events = { path = "../core/events" }
services = { path = "../core/services" }
messaging = { path = "../messaging" }
identity = { path = "../identity" }
channel = { path = "../commons/channel" }
agent-settings = { path = "../core/settings" }
crypto = { path = "../commons/crypto" }
anyhow = { workspace = true }

serde_json = { workspace = true }
serde = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
sha256 = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
tokio-util = { workspace = true }
sys-info = "0.9.1"
uptime_lib = "0.3.0"