[package]
name = "telemetry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
events = { path = "../core/events" }
services = { path = "../core/services" }
agent_settings = { path = "../core/settings" }
messaging = { path = "../messaging" }
identity = { path = "../identity" }
anyhow = { version = "1.0.71", features = ["backtrace"]}
serde_json = "1.0.33"
serde = { version  = "1.0.159", features = ["derive"]}
rand = "0.8.5"
reqwest = "0.11.19"
dotenv = "0.15.0"
axum = "0.6.17"
tonic = "0.9.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry-instrumentation-sdk = "0.12.0"
sentry-anyhow = { version= "0.31.1", features = ["backtrace"]}
sha256 = "1.1.2"
tokio = { version = "1.27.0", features = ["full"] }
tokio-util = "0.7.10"
once_cell = "1.19.0"
opentelemetry = { version="0.21.0", features=["metrics"] }
opentelemetry-appender-log = { version="0.2.0", default-features = false }
opentelemetry-otlp = {version="0.14.0", features = ["tonic", "metrics", "logs"] }
opentelemetry-semantic-conventions = "0.13.0"
opentelemetry_sdk = { version="0.21.0", features=["rt-tokio", "logs"] }
sysinfo = "0.30.5"