[package]
name = "telemetry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
events = { path = "../core/events" }
services = { path = "../core/services" }
agent-settings = { path = "../core/settings" }
messaging = { path = "../messaging" }
channel = { path = "../commons/channel" }
identity = { path = "../identity" }
settings = { path = "../settings" }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }

sha256 = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
log = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }
init-tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry-appender-log = { version="0.2.0", default-features = false }
opentelemetry-otlp = {version="0.14.0", features = ["tonic", "metrics", "logs"] }
opentelemetry-semantic-conventions = "0.13.0"
opentelemetry-stdout = {version = "0.2.0", features = ["logs"]}
opentelemetry_sdk = { version="0.21.0", features=["rt-tokio", "logs"] }
once_cell = "1.19.0"
sysinfo = "0.30.5"
