[package]
name = "connect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
relm4 = "0.7.0-beta.1"
relm4-macros = "0.7.0-beta.1"
anyhow = "1.0.71"
serde = { version = "1.0.163", features = ["derive",] }
serde_yaml = "0.9.21"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
image = "0.24.7"
custom_widgets = { path = "../commons/custom_widgets"}
custom_utils = { path = "../commons/custom_utils"}
tonic = "0.9.2"
prost = "0.11.9"
async-trait = "0.1.73"
tokio = {version = "1.35.1", features = ["full"] } 
tokio-util = "0.7.10"
reqwest = "0.11" 

[build-dependencies]
tonic-build = "0.9.2"