[package]
name = "crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agent_settings = { path = "../../core/settings" }
anyhow = { version = "1.0.71", features = ["backtrace"]}
base64 = "0.21.4"
mkdirp = "1.0.0"
openssl = "0.10.56"
rand = "0.8.5"
sentry = { version = "0.32.0",features = ["backtrace", "anyhow"] }
sentry-anyhow = { version= "0.32.1", features = ["backtrace"]}
serde_json = "1.0.33"
serde = { version  = "1.0.159", features = ["derive"]}
tonic = "0.10.2"
tracing = "0.1"

chrono = "0.4.31"
fs = { path = "../fs" }