[package]
name = "crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agent-settings = { path = "../../core/settings" }
fs = { path = "../fs" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
base64 = "0.21.4"
mkdirp = "1.0.0"
rand = "0.8.5"
sentry = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tonic = { workspace = true }
chrono = { workspace = true }
rcgen = "0.12.1"
rsa = "0.9.6"
sha2 = {version = "0.10.8",  features = ["oid"]}
x509-certificate = "0.23.1"