[package]
name = "fs"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"]}
mkdirp = "1.0.0"
dirs = "5.0.1"
tracing = "0.1"
sentry-anyhow = { version= "0.32.1", features = ["backtrace"]}